# ClusLib

./: CMakeLists.txt  CMakeLists.txt_backup  compile_commands.json  example_dataset.csv  example_dataset.names
cl/: cldefines.h  errors.cpp  errors.hpp  types.h
cl/clusters/: CMakeLists.txt  centercluster.cpp  centercluster.hpp  cluster.h  compile_commands.json  hclustering.cpp  hclustering.hpp  pclustering.cpp  pclustering.hpp  subspacecluster.cpp  subspacecluster.hpp
cl/datasets/: CMakeLists.txt  attrinfo.cpp  attrinfo.hpp  attrvalue.h  cattrinfo.cpp  cattrinfo.hpp  dataset.cpp  dataset.hpp  dattrinfo.cpp  dattrinfo.hpp  record.cpp  record.hpp  schema.cpp  schema.hpp
cl/distance/: distance.hpp  euclideandistance.hpp  minkowskidistance.cpp  minkowskidistance.hpp
cl/distances/: CMakeLists.txt  distance.hpp  euclideandistance.cpp  euclideandistance.hpp  mahalanobisdistance.hpp  minkowskidistance.cpp  minkowskidistance.hpp
cl/patterns/: CMakeLists.txt  compile_commands.json  dendrogramvisitor.cpp  dendrogramvisitor.hpp  internalnode.cpp  internalnode.hpp  joinvaluevisitor.cpp  joinvaluevisitor.hpp  leafnode.cpp  leafnode.hpp  node.hpp  nodevisitor.hpp  pcvisitor.cpp  pcvisitor.hpp
cl/utilities/: CMakeLists.txt  compile_commands.json  container.h  dendrogram.cpp  dendrogram.hpp  matrix.cpp  matrix.hpp  nnmap.h  null.h
examples/: CMakeLists.txt  dataset_example_main.cpp
xcode_consistent/ClusLib/ClusLib.xcodeproj/: project.pbxproj
xcode_consistent/ClusLib/ClusLib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode_consistent/ClusLib/ClusLib.xcodeproj/xcuserdata/zw.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode_consistent/ClusLib/dataset_example/: main.cpp
